@@ -27,7 +27,7 @@
 			<option value="1">JPUBLISHED</option>
 			<option value="0">JUNPUBLISHED</option>
 			<option value="2">JARCHIVED</option>
-			<option value="-2">JTRASH</option>
+			<option value="-2">JTRASHED</option>
 		</field>
 		<field name="ordering" type="ordering" class="inputbox"
 
