@@ -66,7 +66,7 @@ abstract class JHtmlLanguages {
 		$options	= array();
 		$options[]	= JHtml::_('select.option', '1', 'JPUBLISHED');
 		$options[]	= JHtml::_('select.option', '0', 'JUNPUBLISHED');
-		$options[]	= JHtml::_('select.option', '-2', 'JTRASH');
+		$options[]	= JHtml::_('select.option', '-2', 'JTRASHED');
 		$options[]	= JHtml::_('select.option', '*', 'JALL');
 
 		return $options;
