@@ -155,8 +155,8 @@ Laotian (lo-LA) - Joomla LaiLao Team (LaoOpenSource) - Akarawuth Tamrareang , Vi
 Lithuanian (lt-LT) - Lithuanian Translation Team - Stasys Svabas
 Malayalam - India (ml-IN) - Sujith Kumar
 Macedonian (mk-MK) - Macedonian Translation Team - Ilija Iliev Strumjan
-Norwegian bokmål (nb-NO) - Joomla! i Norge - Rune Rasmussen, Roar Jystad, Jens-Christian Skibakk
-Norwegian (nn-NO) - Joomla! i Norge - Toyni Tobekk (based on nb-NO translations)
+Norwegian Bokmål (nb-NO) - Joomla! i Norge - Rune Rasmussen, Roar Jystad, Jens-Christian Skibakk
+Norwegian Nynorsk (nn-NO) - Joomla! i Norge - Toyni Tobekk (based on nb-NO translations)
 Persian (fa-IR) - Persian Translation Team - Mostafa Alavi nik , joomfa team
 Polish (pl-PL) - Polskie Centrum Joomla! - Maciej Słojewski, Stefan Wajda
 Portuguese (pt-PT) - Comunidade Joomla! Portugal - Paulo Izidoro
